--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "webpack": "^5.2.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "copy-webpack-plugin": "^6.2.1"
   }
 }
